--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -225,25 +225,29 @@ In a constant environment, the system ultimately reaches a steady state of expon
 
 ## Steady state behavior
 
-To analyze qualitative behavior, we ran the model to steady state across gradients of external irradiance and nutrients (Fig. 2), which revealed patterns consistent with observed phenomena in corals. Predicted growth rates are low at low light and DIN (~0.01 d^-1^), and begin increasing as both of these factors increase (Fig. 2A). Low light is limiting to photosynthesis (Fig. 2D), which leads to carbon-limitation of host growth (Fig. 2B) and an associated increase in the symbiont to host biomass ratio (Fig. 2C). In agreement with this trend are many observations of negative correlation between irradiance and symbiont density [@Stimson:1997p3837; @Brown:1999p3534; @Fitt:2000p3792; @Titlyanov:2001p3631]. As higher light alleviates light-limitation of photosynthesis, growth becomes less carbon-limited. Similarly, elevating DIN up to ~2 µM alleviates nitrogen-limitation (Fig. 2B). Increased growth at higher DIN is predicted by the DEB model of @Muller:2009io, and has also been observed experimentally [@MullerParker:1994uo; @Tanaka:2007uv; @Tanaka:2013dj]. However, DIN elevation beyond a certain point (e.g., ~3-4 µM in these simulations) has little effect on growth as carbon becomes limiting (Fig. 2B). Very high nutrient levels may even reduce growth [@Shantz:2015dz], although these impacts are not likely to occur within the range of concentrations considered here (<4 µM) [@FerrierPages:2000p1950]. 
-
-In addition to increasing growth, DIN also increases the symbiont to host biomass ratio, a phenomenon also observed in reef corals [@Marubini:1996p8460]. S:H ratios also increase under low light [@Stimson:1997p3837; @Fitt:2000p3792; @Anthony:2003p3632]. At low DIN and intermediate light, more typical of coral reef environments, symbiont to host biomass ratios are around ~0.1-0.3, which is consistent with values reported in the literature [@Muscatine:1981jy; @Edmunds:2011bv].
-
 ![Steady state values of **A)** specific growth (Cmol Cmol^-1^ d^-1^), **B)** the symbiont to host biomass ratio (CmolS CmolH^-1^), **C)** relative C- or N-limitation of host biomass formation, and **D)** relative CO~2~- or light-limitation of symbiont photosynthesis, across gradients of external irradiance and dissolved inorganic nitrogen. Note that typical conditions for reefs are ~1e-7 M DIN and 10-20 mol photons m^-2^ d^-1^. Simulations for each combination of light and nutrients (41 points along each axis) were run for 100 days with a time step of 1 day. Negative steady state growth rates, and corresponding S:H ratios, were set to zero.](../img/Fig2.png)
 
-The maximum predicted growth rates of ~0.1 d^-1^, occurring between ~10-20 mol photons m^-2^ s^-1^ light and ~4 µM DIN (Fig. 2A), are comparable to the rate of `r Tanaka_gr` d^-1^ measured by @Tanaka:2007uv under similar N-enriched conditions. Growth under conditions more typical of reef environments (<0.5 µM DIN) are within the range of ~0.01-0.03 d^-1^; these values are slightly higher than most specific growth rates reported in the literature, which are typically based on skeletal mass, and fall near or below 0.01 d^-1^ [@Osinga:2011kq; @Osinga:2012is] (though values as high as 0.025 d^-1^ have been reported [@Schutter:2010p7758]). These generally low skeletal growth rates relative to predicted biomass growth may be explained by differential substrate-limitation (i.e., CO~2~ may limit calcification, which is not present in the model); indeed, tissue and skeletal growth may not always be well correlated [@Anthony:2002tc]. Furthermore, bioerosion may reduce net skeletal growth, especially in the field [@Bak:1976bv]. Nevertheless, when rates of increase in coral tissue biomass have been directly measured over short periods, values are consistent with model predictions (e.g., `r Tanaka_gr` d^-1^ in @Tanaka:2007uv), and similar rates (`r Armoza_gr` d^-1^) have been measured in *Aiptasia diaphana*, a non-calcifying symbiotic anemone [@ArmozaZvuloni:2014ju].
+To analyze qualitative behavior, we ran the model to steady state across gradients of external irradiance and nutrients (Fig. 2), which revealed patterns consistent with observed phenomena in corals. Predicted growth rates are low at low light and DIN (~0.01 d^-1^), and begin increasing as both of these factors increase (Fig. 2A). Low light limits photosynthetic rates, resulting in less fixed carbon shared with the host and an associated increase in the symbiont to host biomass ratio (Fig. 2B). In agreement with this trend are many observations of negative correlation between irradiance and symbiont density [@Stimson:1997p3837; @Brown:1999p3534; @Fitt:2000p3792; @Titlyanov:2001p3631]. As higher light alleviates light-limitation of photosynthesis, growth becomes less carbon-limited. 
 
-As irradiance continues to increase above ~20 mol photons m^-2^ d^-1^, growth rates decline until positive growth ceases above ~35 µmol photons m^-2^ d^-1^. The mechanism underlying this decline is the increase in light energy beyond the capacity of photosynthesis and non-photochemical quenching: excess excitation energy generates reactive oxygen species (ROS) [@Weis:2008p944; @Roth:2014wf], which, in this model, have the phenomenological consequences of reducing the photosynthetic rate (representing photoinhibition) and increasing symbiont biomass loss (representing photodamage and/or symbiont expulsion) [see @Eynaud:2011tv]. Together, these impacts reduce the symbiont to host biomass ratio (Fig. 2C), as occurs during coral bleaching. This reduction in symbionts consequently reduces the flux of fixed carbon to the host, resulting in increasing carbon-limitation (Fig. 2B) and eventual cessation of growth (Fig. 2A). Importantly, these consequences arise in the present model only when light energy exceeds the capacity of photochemistry and NPQ, which in turn depends on CO~2~ availability. While previous models framed photophysiological stress as a fixed response to absolute irradiance levels [@Eynaud:2011tv], the current implementation considers the dynamic balance of multiple energy sinks in the causation of stress, which is more consistent with current understanding of symbiosis dysfunction [@Wooldridge:2013tj], and establishes an important role of the host in providing CO~2~ for symbiont photosynthesis [@Tansik:2015cm; @Hopkinson:2015ev].
+Similarly, increasing DIN up to ~2 µM alleviates nitrogen-limitation (Fig. 2A). Increased growth at higher DIN is predicted by the DEB model of @Muller:2009io, and has also been observed experimentally [@MullerParker:1994uo; @Tanaka:2007uv; @Tanaka:2013dj]. However, DIN elevation beyond a certain point (e.g., ~3-4 µM in these simulations) has little effect on growth as carbon becomes limiting. Very high nutrient levels may even reduce growth [@Shantz:2015dz], although these impacts are not likely to occur within the range of concentrations considered here (<4 µM) [@FerrierPages:2000p1950]. In addition to increasing growth, DIN also increases the symbiont to host biomass ratio (Fig. 2B), a phenomenon also observed in reef corals [@Marubini:1996p8460]. At low DIN and intermediate light, more typical of coral reef environments, symbiont to host biomass ratios are around ~0.1-0.3, which is consistent with values reported in the literature [@Muscatine:1981jy; @Edmunds:2011bv; @Hawkins:2016jj].
 
-While bleaching in response to high light alone has been observed experimentally [@Schutter:2011ie; @Downs:2013kc], mass coral bleaching events occur in response to high temperature [@HoeghGuldberg:1999p4222]; thus, it is important to justify our consideration of light as the primary stressor in the model. In reality, light and temperature interact synergistically [@Coles:1978p1124; @Jones:1998p3572], and in fact, any stressor that disrupts the quenching of light energy may lead to bleaching [@Wooldridge:2010p7809; @Baker:2015kp]. This is because the proximate cause of coral bleaching is excess excitation energy, but the upstream events that lead to this situation may be diverse: indeed, elevated temperature inhibits Rubisco functioning [@Jones:1998p3572] and repair of the D1 protein in photosystem II [@Warner:1999p4239], which reduces the capacity of photochemical quenching and leads to an excess of light energy. In this way, elevated temperature serves to reduce the threshold above which light causes stress to the system [@HoeghGuldberg:1999p4222]; importantly, light is still the proximate stressor. Therefore, we omitted temperature from the model, which serves to maintain a desired level of simplicity, while still allowing photophysiological stress and bleaching to be simulated with biological realism in response to light. Thus, the specific light levels that cause stress here should be interpreted in this context, and the effects of high light are analagous to the effects of high temperature.
+The maximum predicted growth rates of ~0.1 d^-1^, occurring between ~10-20 mol photons m^-2^ s^-1^ light and ~4 µM DIN (Fig. 2A), are comparable to the rate of `r Tanaka_gr` d^-1^ measured by @Tanaka:2007uv under similar N-enriched conditions. Predicted growth rates under conditions more typical of reef environments (<0.5 µM DIN) are ~0.01-0.03 d^-1^. Observed specific growth rates, which are typically based on skeletal mass, fall near or below 0.01 d^-1^ [@Osinga:2011kq; @Osinga:2012is] (though values as high as 0.025 d^-1^ have been reported [@Schutter:2010p7758]). That predicted growth rates are slightly higher than most observations is not surprising, as the model does not account for external ecological factors that may reduce growth, such as competition, predation, and bioerosion. Furthermore, the model does not explicitly account for skeletal formation, which may not always be well correlated with biomass growth, potentially due to differential substrate-limitation [@Anthony:2002tc]. Nevertheless, when rates of increase in coral tissue biomass have been directly measured over short periods, values are consistent with model predictions (e.g., `r Tanaka_gr` d^-1^ in @Tanaka:2007uv), and similar rates (`r Armoza_gr` d^-1^) have been measured in *Aiptasia diaphana*, a non-calcifying symbiotic anemone [@ArmozaZvuloni:2014ju].
 
-The incorporation of light stress in the model sets an upper limit to the amount of light at which a stable symbiotic interaction can be maintained, but even below this threshold of breakdown, negative effects of high light reduce steady state growth and symbiont:host biomass (Fig. 2A,C). This gradual decline is consistent with experimental results showing that high light levels decrease growth [@Schutter:2011ie], and field studies documenting optimum growth rates at intermediate depths [@Baker:1975ip; @Huston:1985ec]. Consequently, the model predicts greater variation in state variables across light gradients than was predicted by the model of @Muller:2009io, which did not include photoinhibition and photodamage. It is important to recognize that these are steady state values predicted under a constant environment at the given light and nutrient levels; a dynamic system may temporarily cross this threshold and experience a period of symbiont loss (bleaching) and reduced growth, after which a return to benign conditions may restore symbiont biomass and positive growth. To explore this further and illustrate the behavior of the model in more detail, we evaluate a number of dynamic simulations below.
+As irradiance continues to increase above ~20 mol photons m^-2^ d^-1^, growth rates decline until positive growth ceases above ~35 µmol photons m^-2^ d^-1^ (Fig. 2A). The mechanism underlying this decline is the increase in light energy beyond the capacity of photosynthesis and non-photochemical quenching: excess excitation energy generates reactive oxygen species (ROS) [@Weis:2008p944; @Roth:2014wf], which, in this model, have the phenomenological consequences of reducing the photosynthetic rate (representing photoinhibition) and increasing symbiont biomass loss (representing photodamage and/or symbiont expulsion) [see @Eynaud:2011tv]. Together, these impacts reduce the symbiont to host biomass ratio (Fig. 2B), as occurs during coral bleaching. This reduction in symbionts consequently reduces the flux of fixed carbon to the host, resulting in increasing carbon-limitation (Fig. 2B) and eventual cessation of growth (Fig. 2A). 
 
-## Sensitivity analysis -- should come after the steady states bc describes changes in steady states
+While bleaching in response to high light alone has been observed experimentally [@Schutter:2011ie; @Downs:2013kc], mass coral bleaching events occur in response to high temperature [@HoeghGuldberg:1999p4222]; thus, it is important to justify our consideration of light as the primary stressor in the model. In reality, light and temperature interact synergistically [@Coles:1978p1124; @Jones:1998p3572], and in fact, any stressor that disrupts the quenching of light energy may lead to bleaching [@Wooldridge:2010p7809; @Baker:2015kp]. This is because the proximate cause of coral bleaching is excess excitation energy, but the upstream events that lead to this situation may be diverse: indeed, elevated temperature may inhibit Rubisco functioning [@Jones:1998p3572] and the repair of the D1 protein in photosystem II [@Warner:1999p4239], which reduces the capacity of photochemical quenching and leads to an excess of light energy. In this way, elevated temperature serves to reduce the threshold above which light causes stress to the system [@HoeghGuldberg:1999p4222]; importantly, light is still the proximate stressor. Therefore, we omitted temperature from the model to maintain a desired level of simplicity, while still allowing photophysiological stress and bleaching to be simulated with biological realism in response to light. Thus, while the model is currently accurate from a conceptual and mechanistic standpoint, its value as a predictive tool under scenarios of changing temperature will require further development.
 
-Each default parameter value used in the model (Table 2) is based on carefully selected relevant literature. A supplementary document detailing the derivations of each of these default parameter values is provided. Nevertheless, it is important to evaluate the sensitivity of the model to changes in these parameter values. We measured fractional change in steady state values in response to fractional change in parameter values, relative to their default values (Table 2).
+The incorporation of light stress in the model sets an upper limit to the amount of light at which a stable symbiotic interaction can be maintained, but even below this threshold of breakdown, negative effects of high light reduce steady state growth and symbiont:host biomass (Fig. 2). This gradual decline is consistent with experimental results showing that high light levels decrease growth [@Schutter:2011ie], and field studies documenting optimum growth rates at intermediate depths [@Baker:1975ip; @Huston:1985ec]. By incorporating these impacts of light stress, the model predicts greater, and more realistic, variation in state variables across light gradients than was predicted by the model of @Muller:2009io, which did not include photoinhibition and photodamage. 
+
+It is important to recognize that the boundary set by photo-oxidative stress on a stable symbiosis under steady state conditions (Fig. 2) may be temporarily crossed by a dynamic system, which may experience a period of symbiont loss (bleaching) and reduced growth, after which a return to benign conditions may restore symbiont biomass and positive growth. To explore this further and illustrate the behavior of the model in more detail, we evaluate a number of dynamic simulations below (see "Dynamic behavior").
+
+## Sensitivity analysis
+
+Each default parameter value used in the model (Table 2) is based on carefully selected relevant literature. The derivations of each of these default parameter values are described in the Supplementary Information. Nevertheless, it is important to evaluate the sensitivity of the model to changes in these parameter values. Moreover, these sensitivity plots serve to demonstrate the behavior of the dynamical system. We measured fractional change in steady state values in response to fractional changes in parameter values, relative to their default values, under environmental conditions typical of coral reefs.
 
 ![Sensitivity analysis. Plots show the fractional change in steady state values of growth (solid lines) and S:H biomass (dashed lines) in response to fractional changes in default parameter values (see Table 2 for default values). Parameters are grouped by which processes they are involved in. This sensitivity analysis was conducted at conditions typical for coral reef environments: low DIN (1e-7 M) and intermediate light (15 mol m^-2^ d^-2^). Sensitivity analyses conducted other environmental conditions are presented in the Supplementary Information.](../img/Fig3.png)
+
+Overall, relative changes in the steady state of the system were less than the equivalent relative change in parameter value, indicating that the system maintains internal stability. However, changes in certain parameter values have greater impacts: increasing $j_{Nm}$ or decreasing $K_N$ both dramatically increase host growth, demonstrating the strong nitrogen-limitation that characterizes these symbioses (REF). The parameterr $\bar{a}^*$ has a strong impact on S:H biomass ratios, because this parameter determines the amount of light absorbed by symbionts, thus low values of this parameter increase light-limitation of the system. Altering the maximum growth and turnover rates of symbiont and host biomass also have expected impacts on steady states. Parameters having to do with photooxidative stress and bleaching have little impact under these environmental conditions, but of course have larger impacts under higher light (e.g., Fig. S6).
 
 ## Dynamic behavior
 Therefore, we are highly interested in the conditions under which the system switches from one state to another, representing the conditions under which corals "bleach" due to progressive, reinforcing carbon-limitation. Interestingly, this state can be reached in multiple ways, by the acceleration of photoinhibition and photodamage, or by high external DIN, which causes the symbiont to share less carbon, subsequently causing its own CO2-limitation, and progressive C-limitation of the system.
@@ -251,6 +255,7 @@ Therefore, we are highly interested in the conditions under which the system swi
 ## varying DIN: role of N-limitation and consequences of elevated N
 ## elevated nutrients cause system to become C-limited (photo: CO2 limited; host: fixed-C limited)
 ## C-limitation increases susceptibility to bleaching
+Importantly, these negative impacts of high irradiance only arise when light energy exceeds the capacity of photochemistry and NPQ, which in turn depends on CO~2~ availability. While previous models framed photophysiological stress as a fixed response to absolute irradiance levels [@Eynaud:2011tv], the current implementation considers the dynamic balance of multiple energy sinks in the causation of stress, which is more consistent with current understanding of symbiosis dysfunction [@Wooldridge:2013tj], and establishes an important role of the host in providing CO~2~ for symbiont photosynthesis [@Tansik:2015cm; @Hopkinson:2015ev].
 ## consequences of a less efficient but more tolerant symbiont
 ## Rate of symbiont repopulation (Berner et al. 1993)
 ## Bicarbonate addition promotes coral growth (Marubini and Thake 1999)
