--- a/JTB_supp/JTB_supp.Rmd
+++ b/JTB_supp/JTB_supp.Rmd
@@ -432,5 +432,156 @@ sens.plot(response=c("grchange", "shchange"), pars=c("jST0", "jHT0", "jSGm", "jH
 sens.plot(response=c("grchange", "shchange"), pars=c("kNPQ", "kROS", "b"), cols=c("black", "orange", "purple"))
 ```
 
+## Figure S8. Full system dynamics of seasonal light variation at two nutrient levels.
+This figure accompanies Figure 4 in the main text, and show additional model fluxes that demonstrate the mechanisms underlying the changes in the system state in these simulations.
+
+```{r FigS8, cache=T, fig.width=7, fig.height=7}
+# Set parameters
+defpars <- def_pars()  # Get default parameters
+
+# Set run time vector
+time <- seq(1, 365, 0.5)  # if single model run, use time input
+
+# Initialize environments
+env1 <- init_env(time=time, L=c(20,40,2), N=c(1e-7,1e-7,0), X=c(1e-5,1e-5,0))
+env2 <- init_env(time=time, L=c(20,40,2), N=c(1e-6,1e-6,0), X=c(1e-5,1e-5,0))
+
+# Run simulations
+ss1 <- with(run_coral_ss(env=list(L=30,N=1e-7,X=1e-5), pars=defpars), last(S$S/H$H))
+run1 <- run_coral(time=time, env=env1, pars=replace(defpars, "initS", ss1))
+ss2 <- with(run_coral_ss(env=list(L=30,N=1e-6,X=1e-5), pars=defpars), last(S$S/H$H))
+run2 <- run_coral(time=time, env=env2, pars=replace(defpars, "initS", ss2))
+
+par(mfcol=c(6,2), mar=c(2,2,1,4), mgp=c(1,0,0), tcl=0.2)
+
+with(run1, {
+      # External irradiance
+    plot(time, env$L, type="l", col="gold", ylim=c(0,60), lwd=2, xlab="", ylab="mol ph/m2/d")
+    title("External irradiance and DIN", adj=0, line=0.25)
+    par(new=T)
+    plot(time, env$N, type="l", col="blue", ylim=c(0,1e-5), lwd=2, axes=F, xlab="", ylab="")
+    axis(side=4); mtext(side=4, text="molN/L", line=1, cex=0.75)
+    
+    # Symbiont to host biomass ratio
+    totSH <- S$S / H$H
+    totSHf <- totSH[length(totSH)]
+    plot(time, totSH, type="l", col="black", ylim=c(0, 0.25), ylab="CmolS/CmolH", xlab="", lwd=2)
+    text(time[0.95*length(time)], totSHf, labels=as.character(round(totSHf, 3)), pos=3, xpd=T, cex=0.75)
+    title("Symbiont:host biomass", adj=0, line=0.25)
+    
+    # Specific growth rates of host and symbiont
+    Hgrf <- H$dH.Hdt[length(H$dH.Hdt)]
+    plot(time, H$dH.Hdt, type="l", ylim=c(-0.01, 0.13), 
+         xlab="", ylab="d-1", lwd=2, cex=1, cex.lab=1)
+    if(any(c(H$dH.Hdt[-(1:10)], S$dS.Sdt[-(1:10)])<0)) abline(h=0, lwd=0.5, lty=3)
+    text(time[0.95*length(time)], Hgrf, labels=as.character(round(Hgrf, 3)), pos=3, xpd=T, cex=0.75)
+    #title("State variable dynamics", adj=0, cex.main=2, outer = T)
+    title("Specific growth rates", adj=0, line=0.25)
+    lines(time, S$dS.Sdt, col="black", lwd=1)
+    legend("topright", legend=c("Host", "Sym"), lwd=c(2,1), col="black", bty="n", y.intersp=1, cex=0.75)
+    
+    # Light quenching (carbon fixation, NPQ, and excess (=ROS producing))
+    plot(NA, xlim=range(time), xlab="", ylim=c(0,130), ylab="mol ph/CmolS/d")
+    title("Light quenching", adj=0, line=0.25)
+    lines(time, S$jCP/pars$yCL, col="gold", lwd=1) # amt. quenched by photosynthesis
+    lines(time, S$jCP/pars$yCL + S$jNPQ, col="gold", lty=1, lwd=2) # amt. quenched by photo + NPQ
+    lines(time, S$jL, col="gold", lty=3, lwd=2) # total amt. absorbed
+    legend("topright", legend=c("ROS", "NPQ", "Photo."), lty=c(3,1,1), lwd=c(2,2,1), col="gold", bty="n", cex=0.75)
+
+    # Photosynthesis: substrate-limitation
+    pl <- log(   pmin((H$jCO2 + H$rCH)*H$H/S$S + S$rCS, pars$jCPm)   /   pmin(S$jL * pars$yCL, pars$jCPm)    )
+    plot(NA, xlim=range(time), xlab="", ylab="", ylim=c(-0.8, 0.8))
+    title("Photosynthesis: substrate-limitation", adj=0, line=0.25)
+    lines(time, pl, col="black", lty=1, lwd=2)
+    abline(h=0, lty=3)
+    text(par("usr")[2], 0, labels="L-lim.\nCO2-lim.", cex=0.75, adj=1)
+    
+    # Biomass formation - substrate-limitation
+    sl <- log(  pmin(S$jCP, pars$jSGm)   /   pmin((H$rhoN*H$H/S$S + S$rNS)/pars$nNS, pars$jSGm)  )
+    hl <- log(  pmin(S$rhoC*S$S/H$H + H$jX, pars$jHGm) / pmin((H$jN + pars$nNX*H$jX + H$rNH) / pars$nNH, pars$jHGm)  )
+    maxabs <- max(c(abs(hl), abs(sl)))
+    range <- range(c(hl, sl))
+    plot(NA, xlim=range(time), xlab="", ylab="", ylim=c(-1.5,1.5))
+    title("Biomass: substrate-limitation", adj=0, line=0.25)
+    lines(time, hl, col="black", lty=1, lwd=2)
+    lines(time, sl, col="black", lty=1, lwd=1)
+    abline(h=0, lty=3)
+    text(par("usr")[2], 0, labels="N-lim.\nC-lim.", cex=0.75, adj=1)
+    legend("topright", legend=c("Host", "Sym"), lty=1, lwd=c(2,1), col="black", bty="n", cex=0.75)
+})
+
+with(run2, {
+      # External irradiance
+    plot(time, env$L, type="l", col="gold", ylim=c(0,60), lwd=2, xlab="", ylab="mol/m2/d")
+    title("External irradiance and DIN", adj=0, line=0.25)
+    par(new=T)
+    plot(time, env$N, type="l", col="blue", ylim=c(0,1e-5), lwd=2, axes=F, xlab="", ylab="")
+    axis(side=4); mtext(side=4, text="molN/L", line=1, cex=0.75)
+    
+    # Symbiont to host biomass ratio
+    totSH <- S$S / H$H
+    totSHf <- totSH[length(totSH)]
+    plot(time, totSH, type="l", col="black", ylim=c(0, 0.25), ylab="CmolS/CmolH", xlab="", lwd=2)
+    text(time[0.95*length(time)], totSHf, labels=as.character(round(totSHf, 3)), pos=3, xpd=T, cex=0.75)
+    title("Symbiont:host biomass", adj=0, line=0.25)
+    
+    # Specific growth rates of host and symbiont
+    Hgrf <- H$dH.Hdt[length(H$dH.Hdt)]
+    plot(time, H$dH.Hdt, type="l", ylim=c(-0.01,0.13), 
+         xlab="", ylab="d-1", lwd=2, cex=1, cex.lab=1)
+    if(any(c(H$dH.Hdt[-(1:10)], S$dS.Sdt[-(1:10)])<0)) abline(h=0, lwd=0.5, lty=3)
+    text(time[0.95*length(time)], Hgrf, labels=as.character(round(Hgrf, 3)), pos=3, xpd=T, cex=0.75)
+    #title("State variable dynamics", adj=0, cex.main=2, outer = T)
+    title("Specific growth rates", adj=0, line=0.25)
+    lines(time, S$dS.Sdt, col="black", lwd=1)
+    legend("topright", legend=c("Host", "Sym"), lwd=c(2,1), col="black", bty="n", y.intersp=1, cex=0.75)
+    
+    # Light quenching (carbon fixation, NPQ, and excess (=ROS producing))
+    plot(NA, xlim=range(time), xlab="", ylim=c(0,130), ylab="mol ph/CmolS/d")
+    title("Light quenching", adj=0, line=0.25)
+    lines(time, S$jCP/pars$yCL, col="gold", lwd=1) # amt. quenched by photosynthesis
+    lines(time, S$jCP/pars$yCL + S$jNPQ, col="gold", lty=1, lwd=2) # amt. quenched by photo + NPQ
+    lines(time, S$jL, col="gold", lty=3, lwd=2) # total amt. absorbed
+    legend("topright", legend=c("ROS", "NPQ", "Photo."), lty=c(3,1,1), lwd=c(2,2,1), col="gold", bty="n", cex=0.75)
+
+    # Photosynthesis: substrate-limitation
+    pl <- log(   pmin((H$jCO2 + H$rCH)*H$H/S$S + S$rCS, pars$jCPm)   /   pmin(S$jL * pars$yCL, pars$jCPm)    )
+    maxabs <- max(abs(pl))
+    plot(NA, xlim=range(time), xlab="", ylab="", ylim=c(-0.8, 0.8))
+    title("Photosynthesis: substrate-limitation", adj=0, line=0.25)
+    lines(time, pl, col="black", lty=1, lwd=2)
+    abline(h=0, lty=3)
+    text(par("usr")[2], 0, labels="L-lim.\nCO2-lim.", cex=0.75, adj=1)
+    
+    # Biomass formation - substrate-limitation
+    sl <- log(  pmin(S$jCP, pars$jSGm)   /   pmin((H$rhoN*H$H/S$S + S$rNS)/pars$nNS, pars$jSGm)  )
+    hl <- log(  pmin(S$rhoC*S$S/H$H + H$jX, pars$jHGm) / pmin((H$jN + pars$nNX*H$jX + H$rNH) / pars$nNH, pars$jHGm)  )
+    maxabs <- max(c(abs(hl), abs(sl)))
+    range <- range(c(hl, sl))
+    plot(NA, xlim=range(time), xlab="", ylab="", ylim=c(-1.5,1.5))
+    title("Biomass: substrate-limitation", adj=0, line=0.25)
+    lines(time, hl, col="black", lty=1, lwd=2)
+    lines(time, sl, col="black", lty=1, lwd=1)
+    abline(h=0, lty=3)
+    text(par("usr")[2], 0, labels="N-lim.\nC-lim.", cex=0.75, adj=1)
+    legend("topright", legend=c("Host", "Sym"), lty=1, lwd=c(2,1), col="black", bty="n", cex=0.75)
+})
+```
+
+# Figure S9. Overshoot of symbiont density following bleaching.
+```{r FigS9, cache=T}
+# Set run time vector
+time <- seq(-100, 1095, 0.5)  # if single model run, use time input
+
+# Initialize environment
+env <- init_env(time=time, L=c(60,20,4), N=c(2e-7,2e-7,0), X=c(2e-6,2e-6,0))
+
+# Set parameters
+defpars <- def_pars()  # Get default parameters
+
+# Run simulation
+run <- run_coral(time=time, env=env, pars=replace(defpars, "kCO2", 6))#
+plot_run(run)
+```
 
 ## References
