--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -254,7 +254,7 @@ The dynamic behavior of the model demonstrates its power to integrate multiple e
 ## Seasonal variability
 Symbiont densities and coral growth rates are known to vary seasonally, representing an integrated response to changes in a suite of environmental factors. Light in particular is a strong driver of these trends [Stimson:1997p3837; @Brown:1999p3534; @Fagoonee:1999p4136; @Fitt:2000p3792], with high light associated with lower symbiont abundance and reduced tissue biomass. The role of light in driving seasonal changes in symbiont density was demonstrated nicely by @Stimson:1997p3837, who also found that experimental nutrient-enrichment amplified the light-driven seasonal oscillation. Using the levels of light and nutrients from this study as inputs, the model reproduces this observed interaction among environmental factors (Fig. 4), and also provides the mechanism: under high light in summer, photoinhibition reduces symbiont biomass and leads to carbon-limitation of host growth regardless of nutrient status; when light is reduced in winter, these responses become constrained instead by nitrogen, and therefore increase more when DIN is enriched (Fig. S8).
 
-![Figure 4. Light-driven seasonal dynamics of symbiont abundance and coral growth. Light input (upper panel) was designed as a sinusoidal curve with a period of one year, with maximum and minimum values of 40 and 22 mol photons m^-2^ d^-1^, based on @Stimson:1997p3837. The dynamic behavior of symiont to host biomass ratio (middle panel) and the specific growth rate of host biomass (lower panel) show seasonal oscillations that are greater in magnitude under higher nutrients (1e-5 molN L^-1^; dashed lines) relative to lower nutrients (1e-7 molN L^-1^; solid lines), consistent with the findings of @Stimson:1997p3837. Prey density was set at 1e-5 CmolX L^-1^.](../img/Fig4.png)
+![Figure 4. Light-driven seasonal dynamics of symbiont abundance and coral growth. Light input (upper panel) was designed as a sinusoidal curve with a period of one year, with maximum and minimum values of 40 and 20 mol photons m^-2^ d^-1^, based on @Stimson:1997p3837. The dynamic behavior of symiont to host biomass ratio (middle panel) and the specific growth rate of host biomass (lower panel) show seasonal oscillations that are greater in magnitude under higher nutrients (1e-6 molN L^-1^; dashed lines) relative to lower nutrients (1e-7 molN L^-1^; solid lines), consistent with the findings of @Stimson:1997p3837. Prey density was set at 1e-5 CmolX L^-1^.](../img/Fig4.png)
 
 The prediction of higher growth when light is reduced indicates that growth is not limited by low light in winter, but is actually reduced by excess light in summer, consistent with the experimental findings of @Schutter:2011ie. Seasonal summertime reductions in tissue biomass have also been well-documented in the field [@Fitt:2000p3792], along with reductions in net photosynthetic capacity [@MullerParker:1987cr]. Importantly, while light alone (at these levels) may drive seasonal dynamics in the ways discussed, temperature fluctuations may attenuate or even reverse the effect of light as cooler winters depress metabolism; thus, the relative magnitude of fluctuation in temperature, light, and other factors may produce wide variability in the direction and magnitude of seasonal changes in growth and symbiont abundance, depending on location and microhabitat. Nevertheless, the seasonal variability predicted here (Fig. 4) is consistent with experimental and field observations for corals, and demonstrates the power of this model to predict dynamic behavior that mechanistically integrate the impacts of multiple environmental drivers.
 
@@ -265,15 +265,15 @@ While these positive feedbacks have been discussed previously in the literature,
 
 We are highly interested in the conditions under which the system switches from a healthy to a bleached state, and can use this model as a tool to explore this dynamic behavior. Most straightforwardly, this switch occurs when irradiance exceeds the capacity of photochemistry and NPQ, causing the production of ROS that leads to photoinhibition, photodamage, and symbiont expulsion, thereby engaging the positive feedbacks that lead to a bleached state (Fig. 5). However, the positive feedbacks involved in bleaching are not engaged only in response to high external irradiance; in fact, they depend on the relative balance of light energy absorption and quenching, which in turn depends on the availability of CO~2~ for photosynthesis. While previous models framed photo-oxidative stress as a fixed response to absolute external irradiance [@Eynaud:2011tv], our implementation considers the dynamic balance of multiple energy sinks in the causation of stress, which is more consistent with current understanding of symbiosis dysfunction [@Wooldridge:2013tj], and establishes a critical role of host CCMs in providing CO~2~ for photosynthesis [@Tansik:2015cm; @Hopkinson:2015ev].
 
-![Figure 5. Bleaching.](../img/Fig5.png)
+![Figure 5. Coral bleaching as a switch from a nitrogen- to carbon-limited alternative stable state. This transition is demonstrated in response to gradually increasing external light (A), which causes an increase in production of ROS (B) that reduces the photosynthetic rate through photoinhibition (C). Decreasing photosynthesis moves the system from overall nitrogen-limitation toward carbon-limitation (D); when this threshold is crossed, the system rapidly becomes highly carbon-limited as photosynthesis becomes CO~2~-limited (E) and symbiont densities rapidly decline (F) into a bleached state. (All parameters at default values; external DIN=1e-7 molN/L, prey density=0).](../img/Fig5.png)
 
 The importance of host CCM activity establishes significant interactive roles for other factors in influencing coral bleaching responses. For example, simulations of high light stress (Fig. 6) demonstrate that bleaching can be attenuated by heterotrophic feeding, a phenomenon which has been observed experimentally [@Borell:2008p108]. The mechanism underlying this prediction is that feeding by the host increases host CCM activity, which delays the onset of CO~2~-limitation of photosynthesis and reduces bleaching severity. On the other hand, elevated nutrients exacerbate bleaching (Fig. 6), since higher symbiont densities are more susceptible to CO~2~-limitation [@Wooldridge:2009p7807]. Several experimental [@Cunning:2013gp; @VegaThurber:2014hk] and correlational studies [@Wooldridge:2009kb] are consistent with this mechanistic link between high nutrients and bleaching.
 
-![Figure 6. Bleaching and interactive factors.](../img/Fig6.png)
+![Figure 6. Bleaching with interactive factors. Simulations of high light stress (sinusoid with maximum=39 mol ph m^-2^ d^-1^) under default environmental conditions (solid line; DIN=1e-7 molN/L; prey=3e-6 CmolX/L), or with elevated feeding (dashed line; prey=6e-6 CmolX/L), or elevated nutrients (dotted line; DIN=1e-6 molN/L). Initial symbiont biomass was set to the steady state for each set of starting conditions, respectively. (All parameters set to default values).](../img/Fig6.png)
 
 Since bleaching represents an alternative stable state, it follows that a bleached coral cannot recover unless the external condition that induced bleaching is alleviated. In natural settings, this typically occurs by seasonal declines in temperature and light. However, due to hysteresis, a coral cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated well *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 7). This is because under the same external conditions, a bleached coral (relative to a healthy one) is characterized by greater light amplification and weaker CCM activity, which serve to maintain the bleached state. The magnitude of hysteresis will depend on external nutrients and prey availability, as well as model parameters, yet the fundamental concept demonstrates a core behavior of the system.
 
-![Figure 7. Hysteresis.](../img/Fig7.png)
+![Figure 7. Hysteresis in coral bleaching and recovery. The symbiont:host biomass ratio is plotted as a function of light from a simulation of linearly increasing, then decreasing, external light. The direction of the trajectory is indicated with arrowheads evenly spaced with respect to time. The rate of change in light was slow (0.005 mol ph d^-1^) such that dynamics track closely to steady state values. (All parameters at default values; DIN=2e-7 molN/L; Prey=2e-6 CmolX/L).](../img/Fig7.png)
 
 The hysteresis demonstrated in Fig. 7 reveals another interesting behavior of the system: during recovery from bleaching, the S:H biomass ratio reaches a higher value that 'overshoots' the level maintained in the healthy stable state. In fact, such a phenomenon has been observed in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug] documenting recovery from bleaching, and has been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model explains this 'overshoot' as an approach to a bifurcation point in the dynamical system: during recovery from the 'bleached' state, host growth is more strongly carbon-limited than symbiont growth (since the symbiont has priority access to carbon), so S:H biomass increases. S:H biomass will continue to increase beyond the alternative steady state levels as long as the symbiont remains carbon-limited; not until nitrogen becomes more strongly limiting to symbiont growth (hence forcing the symbiont to share fixed carbon with the host) will the system 'flip' back to a state of high carbon fixation and overall nitrogen-limitation that characterize a 'healthy' symbiosis. Of course, the magnitude of this 'overshoot' will depend on external nutrient concentrations and the rate of change in the stressor during recovery, though simulations predict similar magnitudes to what was observed by Kemp et al. (supp fig?).
 
